--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,1 +1,11 @@
-<p>detail works!</p>
+<div>
+  <p>
+    Name: {{ user.name }}
+  </p>
+  <p>
+    Card Number: {{ user.cardNumber | async  }}
+  </p>
+  <p>
+    Card Type: {{ user.cardType | async  }}
+  </p>
+</div>
