--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,1 +1,18 @@
-<p>users works!</p>
+<table class="table table-hover">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">Name</th>
+      <th scope="col">Card Number</th>
+      <th scope="col">Card Type</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let user of users | async" (click)="navigateToUser(user.id)">
+      <td>{{ user.id }}</td>
+      <td>{{ user.name }}</td>
+      <td>{{ user.cardNumber }}</td>
+      <td>{{ user.cardType }}</td>
+    </tr>
+  </tbody>
+</table>
