--- a/src/app/pages/detail/detail.component.html
+++ b/src/app/pages/detail/detail.component.html
@@ -1,6 +1,6 @@
 <div>
   <p>
-    Name: {{ user.name }}
+    Name: {{ user.name | async  }}
   </p>
   <p>
     Card Number: {{ user.cardNumber | async  }}
